force-app/main/default/objects/LLC_BI__Product_Funding_Method_Type__c/LLC_BI__Product_Funding_Method_Type__c.object-meta.xml
<CustomObject>
    <description>This junction object enables a user to connect a funding method type to a product in the product catalog.</description>
    <label>Product Funding Method Type</label>
    <nameField>
        <displayFormat>PFMT-{000000}</displayFormat>
        <label>Product Funding Method Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Funding Method Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>