force-app/main/default/objects/LLC_BI__Product_Funding_Method_Type__c/fields/LLC_BI__Failure_Message__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Failure_Message__c</fullName>
    <description>Administrators populate this rich text field with a &apos;failure&apos; message to display to a user upon failure funding of this funding method type.</description>
    <inlineHelpText>Enter a failure message for users that unsuccessfully fund their account.</inlineHelpText>
    <label>Failure Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>