force-app/main/default/objects/LLC_BI__Product_Funding_Method_Type__c/fields/LLC_BI__Funding_Method_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Funding_Method_Type__c</fullName>
    <description>Administrators populate this master-detail relationship with the funding method type associated with the product.</description>
    <inlineHelpText>Select the funding method type associated with a product.</inlineHelpText>
    <label>Funding Method Type</label>
    <referenceTo>LLC_BI__Funding_Method_Type__c</referenceTo>
    <relationshipLabel>Product Funding Method Type Junctions</relationshipLabel>
    <relationshipName>Product_Funding_Method_Type_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>