force-app/main/default/objects/LLC_BI__Product_Funding_Method_Type__c/fields/LLC_BI__Maximum_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maximum_Funding_Amount__c</fullName>
    <description>Administrators populate this currency field with the maximum amount allowed to fund a product with the associated funding method type.</description>
    <inlineHelpText>Enter a maximum funding amount.</inlineHelpText>
    <label>Maximum Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>