force-app/main/default/objects/LLC_BI__Product_Funding_Method_Type__c/fields/LLC_BI__Product__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Product__c</fullName>
    <description>Administrators populate this master-detail relationship with the product associated with the funding method type.</description>
    <inlineHelpText>Select a product associated with the funding method type</inlineHelpText>
    <label>Product</label>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>Product Funding Method Type Junctions</relationshipLabel>
    <relationshipName>Product_Funding_Method_Type_Junctions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>