force-app/main/default/objects/LLC_BI__Product_Funding_Method_Type__c/fields/LLC_BI__Success_Message__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Success_Message__c</fullName>
    <description>Administrators populate this rich text field with a &apos;success&apos; message to display to a user upon successful funding of this funding method type.</description>
    <inlineHelpText>Enter a success message for users that successfully fund their account.</inlineHelpText>
    <label>Success Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>